[gd_scene load_steps=2 format=3 uid="uid://cjgfcnlofrdyw"]

[ext_resource type="Script" path="res://PRG1-15A.gd" id="1_tb7gv"]

[node name="PRG1-15A" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tb7gv")

[node name="itml" type="ItemList" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 150.0
offset_right = 317.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 20

[node name="Calc" type="Button" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 461.0
offset_right = 317.0
offset_bottom = 561.0
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 461.0
offset_right = 637.0
offset_bottom = 561.0
theme_override_font_sizes/font_size = 32
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 657.0
offset_top = 461.0
offset_right = 957.0
offset_bottom = 561.0
theme_override_font_sizes/font_size = 32
text = "Exit"

[connection signal="pressed" from="Calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
